bare minimum support for saml interop #1